@@ -93,17 +93,32 @@ static int	json_parse_string(const char *start, char **error)
 			if ('\0' == *(++ptr))
 				return json_error("invalid escape sequence in string", escape_start, error);
 
-			if ('u' == *ptr)
+			switch (*ptr)
 			{
-				/* check if the \u is followed with 4 hex digits */
-				for (i = 0; i < 4; i++)
-				{
-					if (0 == isxdigit((unsigned char)*(++ptr)))
+				case '"':
+				case '\\':
+				case '/':
+				case 'b':
+				case 'f':
+				case 'n':
+				case 'r':
+				case 't':
+					break;
+				case 'u':
+					/* check if the \u is followed with 4 hex digits */
+					for (i = 0; i < 4; i++)
 					{
-						return json_error("invalid escape sequence in string",
-								escape_start, error);
+						if (0 == isxdigit((unsigned char)*(++ptr)))
+						{
+							return json_error("invalid escape sequence in string",
+									escape_start, error);
+						}
 					}
-				}
+
+					break;
+				default:
+					return json_error("invalid escape sequence in string data",
+							escape_start, error);
 			}
 		}
 
